tests/invalid/unop_type_mismatch.ar
// errc: 4
fn main() {
    {
        const a: u8;
        const b = --a; // this is deliberate
    }

    {
        const a: u16;
        const b = -a;
    }

    {
        const a: u32;
        const b = -a;
    }

    {
        const a: u64;
        const b = -a;
    }
}
